--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "electron": "^8.2.3",
     "electron-packager": "^14.2.1"
+  },
+  "dependencies": {
+    "glob": "^7.1.6"
   }
 }
