--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "name": "movie-manager",
   "version": "1.0.0",
   "description": "A management tool for local movies.",
-  "main": "src/main.js",
+  "main": "main.js",
   "scripts": {
-    "dev": "npx electron .",
+    "build": "webpack",
+    "dev": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shunsuke Miyoshi",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "electron": "^8.2.3",
-    "electron-packager": "^14.2.1"
+    "electron-packager": "^14.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "fs": "0.0.1-security",
