--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "build": "webpack",
-    "dev": "electron .",
+    "dev": "webpack && electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shunsuke Miyoshi",
