--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "fs": "0.0.1-security",
-    "glob": "^7.1.6"
+    "glob": "^7.1.6",
+    "react-bootstrap": "^1.0.1"
   }
 }
