--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A management tool for local movies.",
   "main": "main.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode production && electron-packager . --overwrite --platform=win32 --arch=x64 --out=dist",
     "dev-server": "webpack --mode development --watch",
-    "electron": "electron .",
+    "electron": "cross-env NODE_ENV=development electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shunsuke Miyoshi",
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "electron": "^8.2.3",
     "electron-packager": "^14.2.1",
